{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 90,
  "lineage": "52937c99-81aa-e5ea-e294-1ec00f9508f1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my-test-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0162f8a42f986a7f7",
            "domain": "vpc",
            "id": "eipalloc-0c4c0a1771339cafe",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-03ee59da53c757bb4",
            "private_dns": "ip-10-0-0-254.ap-south-1.compute.internal",
            "private_ip": "10.0.0.254",
            "public_dns": "ec2-3-108-94-169.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.94.169",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:635725186920:internet-gateway/igw-04914665b7543297d",
            "id": "igw-04914665b7543297d",
            "owner_id": "635725186920",
            "tags": {
              "Name": "internet-getway"
            },
            "tags_all": {
              "Name": "internet-getway"
            },
            "vpc_id": "vpc-02651f29532e63e31"
          },
          "dependencies": [
            "aws_vpc.TFVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgetway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4c0a1771339cafe",
            "id": "nat-006e3e17b5473eeeb",
            "network_interface_id": "eni-03ee59da53c757bb4",
            "private_ip": "10.0.0.254",
            "public_ip": "3.108.94.169",
            "subnet_id": "subnet-0fe89ff4c0b08d78c",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.my-test-eip",
            "aws_subnet.Public-Subnet-1",
            "aws_vpc.TFVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:635725186920:route-table/rtb-08ea69a3203ab693a",
            "id": "rtb-08ea69a3203ab693a",
            "owner_id": "635725186920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-006e3e17b5473eeeb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private route table"
            },
            "tags_all": {
              "Name": "Private route table"
            },
            "vpc_id": "vpc-02651f29532e63e31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.natgetway",
            "aws_vpc.TFVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:635725186920:route-table/rtb-027c4f4cf804b49e9",
            "id": "rtb-027c4f4cf804b49e9",
            "owner_id": "635725186920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04914665b7543297d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route table"
            },
            "tags_all": {
              "Name": "Public route table"
            },
            "vpc_id": "vpc-02651f29532e63e31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_vpc.TFVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private-route-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e96db48cf03070a5",
            "route_table_id": "rtb-08ea69a3203ab693a",
            "subnet_id": "subnet-0a9a09d15b688ccbb"
          },
          "dependencies": [
            "aws_eip.my-test-eip",
            "aws_nat_gateway.natgetway",
            "aws_route_table.Private-route",
            "aws_subnet.Private-Subnet-1",
            "aws_subnet.Public-Subnet-1",
            "aws_vpc.TFVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private-route-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027e998aef989fc1f",
            "route_table_id": "rtb-08ea69a3203ab693a",
            "subnet_id": "subnet-029a16f16ed546bfb"
          },
          "dependencies": [
            "aws_route_table.Private-route",
            "aws_subnet.Private-Subnet-2",
            "aws_subnet.Public-Subnet-1",
            "aws_vpc.TFVPC",
            "aws_eip.my-test-eip",
            "aws_nat_gateway.natgetway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public-route-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e809b0a153e7d39d",
            "route_table_id": "rtb-027c4f4cf804b49e9",
            "subnet_id": "subnet-0fe89ff4c0b08d78c"
          },
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_route_table.Public-route",
            "aws_subnet.Public-Subnet-1",
            "aws_vpc.TFVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public-route-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03590e36a8bf91c6d",
            "route_table_id": "rtb-027c4f4cf804b49e9",
            "subnet_id": "subnet-0111b67ee32532a98"
          },
          "dependencies": [
            "aws_subnet.Public-Subnet-2",
            "aws_vpc.TFVPC",
            "aws_internet_gateway.Igw",
            "aws_route_table.Public-route"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:635725186920:security-group/sg-0908326173dc5055c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0908326173dc5055c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "635725186920",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02651f29532e63e31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TFVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db-sg-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1991601075",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0908326173dc5055c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db-sg",
            "aws_vpc.TFVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db-sg-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-1537008941",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0908326173dc5055c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db-sg",
            "aws_vpc.TFVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:635725186920:subnet/subnet-0a9a09d15b688ccbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a9a09d15b688ccbb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "635725186920",
            "tags": {
              "Name": "Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Private-Subnet-1"
            },
            "vpc_id": "vpc-02651f29532e63e31"
          },
          "dependencies": [
            "aws_vpc.TFVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-Subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:635725186920:subnet/subnet-029a16f16ed546bfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-029a16f16ed546bfb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "635725186920",
            "tags": {
              "Name": "Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Private-Subnet-2"
            },
            "vpc_id": "vpc-02651f29532e63e31"
          },
          "dependencies": [
            "aws_vpc.TFVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:635725186920:subnet/subnet-0fe89ff4c0b08d78c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0fe89ff4c0b08d78c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635725186920",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-02651f29532e63e31"
          },
          "dependencies": [
            "aws_vpc.TFVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-Subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:635725186920:subnet/subnet-0111b67ee32532a98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0111b67ee32532a98",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635725186920",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-02651f29532e63e31"
          },
          "dependencies": [
            "aws_vpc.TFVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TFVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:635725186920:vpc/vpc-02651f29532e63e31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0088c67c39a011316",
            "default_route_table_id": "rtb-025e8e7aaacadc6e2",
            "default_security_group_id": "sg-064d1960336f2bc67",
            "dhcp_options_id": "dopt-cc4defa7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02651f29532e63e31",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-025e8e7aaacadc6e2",
            "owner_id": "635725186920",
            "tags": {
              "Name": "TFVPC"
            },
            "tags_all": {
              "Name": "TFVPC"
            }
          }
        }
      ]
    }
  ]
}